Added forms and buttons.

--- a/english-pos-tagger.html
+++ b/english-pos-tagger.html
@@ -5,6 +5,10 @@
     <title>English Pos Tagger</title>
 </head>
 <body>
-
+<form>
+    <label for="word">Word:</label>
+    <input type="text" id="word" name="word"><br><br>
+    <input type="submit" value="Find Pos">
+</form>
 </body>
 </html>
