--- a/turkish-propbank.html
+++ b/turkish-propbank.html
@@ -5,6 +5,14 @@
     <title>Turkish PropBank</title>
 </head>
 <body>
-
+<form>
+    <label for="verb_name">Verb:</label>
+    <input type="text" id="verb_name" name="verb_name"><br><br>
+    <input type="submit" value="Find Verb">
+    <br><br>
+    <label for="verb_id">Verb SynSet Id:</label>
+    <input type="text" id="verb_id" name="verb_id"><br><br>
+    <input type="submit" value="Find Verb">
+</form>
 </body>
 </html>
