--- a/turkish-sentinet.html
+++ b/turkish-sentinet.html
@@ -5,6 +5,14 @@
     <title>Turkish SentiNet</title>
 </head>
 <body>
-
+<form>
+    <label for="word">Word:</label>
+    <input type="text" id="word" name="word"><br><br>
+    <input type="submit" value="Find Word Sense">
+    <br><br>
+    <label for="synset_id">SynSet Id:</label>
+    <input type="text" id="synset_id" name="synset_id"><br><br>
+    <input type="submit" value="Find Sense">
+</form>
 </body>
 </html>
