--- a/turkish-wordnet.html
+++ b/turkish-wordnet.html
@@ -5,6 +5,23 @@
     <title>Turkish WordNets</title>
 </head>
 <body>
+<form>
+    <label for="word">Word:</label>
+    <input type="text" id="word" name="word"><br><br>
+    <input type="submit" value="Find Word">
+    <br><br>
+    <label for="word2">Word:</label>
+    <input type="text" id="word2" name="word2"><br><br>
+    <input type="submit" value="Find Synonym">
+    <br><br>
+    <label for="word3">Word:</label>
+    <input type="text" id="word3" name="word3"><br><br>
+    <input type="submit" value="Find Antonym">
+    <br><br>
+    <label for="synset_id">SynSet Id:</label>
+    <input type="text" id="synset_id" name="synset_id"><br><br>
+    <input type="submit" value="Find SynSet">
+</form>
 
 </body>
 </html>
