--- a/english-propbank.html
+++ b/english-propbank.html
@@ -5,6 +5,14 @@
     <title>English PropBank</title>
 </head>
 <body>
-
+<form>
+    <label for="predicate_name">Predicate:</label>
+    <input type="text" id="predicate_name" name="predicate_name"><br><br>
+    <input type="submit" value="Find Predicate">
+    <br><br>
+    <label for="roleset_id">Roleset Id:</label>
+    <input type="text" id="roleset_id" name="roleset_id"><br><br>
+    <input type="submit" value="Find Roleset">
+</form>
 </body>
 </html>
