--- a/turkish-morphological-analysis.html
+++ b/turkish-morphological-analysis.html
@@ -5,6 +5,10 @@
     <title>Turkish Morphological Analysis</title>
 </head>
 <body>
-
+<form>
+    <label for="word">Word:</label>
+    <input type="text" id="word" name="word"><br><br>
+    <input type="submit" value="Find Morphological Analysis">
+</form>
 </body>
 </html>
