--- a/turkish-spell-checker.html
+++ b/turkish-spell-checker.html
@@ -5,6 +5,10 @@
     <title>Turkish Spell Checker</title>
 </head>
 <body>
-
+<form>
+    <label for="sentence">Sentence:</label>
+    <input type="text" id="sentence" name="sentence"><br><br>
+    <input type="submit" value="Spell Check">
+</form>
 </body>
 </html>
