Added dictionary search.

--- a/turkish-framenet.html
+++ b/turkish-framenet.html
@@ -7,15 +7,19 @@
 <body>
 <form>
     <label for="frame_name">Frame name:</label>
-    <input type="text" id="frame_name" name="frame_name"><br><br>
+    <input type="text" id="frame_name" name="frame_name" required><br><br>
     <input type="submit" value="Find Frame">
-    <br><br>
+</form>
+<br>
+<form>
     <label for="verb_name">Verb:</label>
-    <input type="text" id="verb_name" name="verb_name"><br><br>
+    <input type="text" id="verb_name" name="verb_name" required><br><br>
     <input type="submit" value="Find Verb">
-    <br><br>
+</form>
+<br>
+<form>
     <label for="verb_id">Verb SynSet Id:</label>
-    <input type="text" id="verb_id" name="verb_id"><br><br>
+    <input type="text" id="verb_id" name="verb_id" required><br><br>
     <input type="submit" value="Find Verb">
 </form>
 </body>
