--- a/turkish-wordnet.html
+++ b/turkish-wordnet.html
@@ -7,19 +7,25 @@
 <body>
 <form>
     <label for="word">Word:</label>
-    <input type="text" id="word" name="word"><br><br>
+    <input type="text" id="word" name="word" required><br><br>
     <input type="submit" value="Find Word">
-    <br><br>
+</form>
+<br>
+<form>
     <label for="word2">Word:</label>
-    <input type="text" id="word2" name="word2"><br><br>
+    <input type="text" id="word2" name="word2" required><br><br>
     <input type="submit" value="Find Synonym">
-    <br><br>
+</form>
+<br>
+<form>
     <label for="word3">Word:</label>
-    <input type="text" id="word3" name="word3"><br><br>
+    <input type="text" id="word3" name="word3" required><br><br>
     <input type="submit" value="Find Antonym">
-    <br><br>
+</form>
+<br>
+<form>
     <label for="synset_id">SynSet Id:</label>
-    <input type="text" id="synset_id" name="synset_id"><br><br>
+    <input type="text" id="synset_id" name="synset_id" required><br><br>
     <input type="submit" value="Find SynSet">
 </form>
 
