--- a/english-pos-tagger.html
+++ b/english-pos-tagger.html
@@ -7,7 +7,7 @@
 <body>
 <form>
     <label for="word">Word:</label>
-    <input type="text" id="word" name="word"><br><br>
+    <input type="text" id="word" name="word" required><br><br>
     <input type="submit" value="Find Pos">
 </form>
 </body>
