--- a/english-propbank.html
+++ b/english-propbank.html
@@ -7,11 +7,13 @@
 <body>
 <form>
     <label for="predicate_name">Predicate:</label>
-    <input type="text" id="predicate_name" name="predicate_name"><br><br>
+    <input type="text" id="predicate_name" name="predicate_name" required><br><br>
     <input type="submit" value="Find Predicate">
-    <br><br>
+    <br>
+</form>
+<form>
     <label for="roleset_id">Roleset Id:</label>
-    <input type="text" id="roleset_id" name="roleset_id"><br><br>
+    <input type="text" id="roleset_id" name="roleset_id" required><br><br>
     <input type="submit" value="Find Roleset">
 </form>
 </body>
