--- a/turkish-dictionary.html
+++ b/turkish-dictionary.html
@@ -5,10 +5,12 @@
     <title>Turkish Dictionary</title>
 </head>
 <body>
-<form>
+<form id="wordSearch">
     <label for="word">Word:</label>
-    <input type="text" id="word" name="word"><br><br>
+    <input type="text" id="word" name="word" required><br><br>
     <input type="submit" value="Find Word">
 </form>
+<p id="result"></p>
+<script src="js/turkish-dictionary-word-search.js"></script>
 </body>
 </html>
