--- a/turkish-propbank.html
+++ b/turkish-propbank.html
@@ -7,11 +7,13 @@
 <body>
 <form>
     <label for="verb_name">Verb:</label>
-    <input type="text" id="verb_name" name="verb_name"><br><br>
+    <input type="text" id="verb_name" name="verb_name" required><br><br>
     <input type="submit" value="Find Verb">
-    <br><br>
+</form>
+<br>
+<form>
     <label for="verb_id">Verb SynSet Id:</label>
-    <input type="text" id="verb_id" name="verb_id"><br><br>
+    <input type="text" id="verb_id" name="verb_id" required><br><br>
     <input type="submit" value="Find Verb">
 </form>
 </body>
