--- a/turkish-sentinet.html
+++ b/turkish-sentinet.html
@@ -7,11 +7,13 @@
 <body>
 <form>
     <label for="word">Word:</label>
-    <input type="text" id="word" name="word"><br><br>
+    <input type="text" id="word" name="word" required><br><br>
     <input type="submit" value="Find Word Sense">
-    <br><br>
+</form>
+<br>
+<form>
     <label for="synset_id">SynSet Id:</label>
-    <input type="text" id="synset_id" name="synset_id"><br><br>
+    <input type="text" id="synset_id" name="synset_id" required><br><br>
     <input type="submit" value="Find Sense">
 </form>
 </body>
