--- a/turkish-spell-checker.html
+++ b/turkish-spell-checker.html
@@ -7,7 +7,7 @@
 <body>
 <form>
     <label for="sentence">Sentence:</label>
-    <input type="text" id="sentence" name="sentence"><br><br>
+    <input type="text" id="sentence" name="sentence" required><br><br>
     <input type="submit" value="Spell Check">
 </form>
 </body>
