--- a/english-pos-tagger.html
+++ b/english-pos-tagger.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <form>
-    <label for="word">Word:</label>
-    <input type="text" id="word" name="word" required><br><br>
-    <input type="submit" value="Find Pos">
+    <label for="sentence">Sentence:</label>
+    <input type="text" id="sentence" name="sentence" required><br><br>
+    <input type="submit" value="Pos Tag">
 </form>
 </body>
 </html>
