--- a/english-pos-tagger.html
+++ b/english-pos-tagger.html
@@ -5,10 +5,12 @@
     <title>English Pos Tagger</title>
 </head>
 <body>
-<form>
+<form id="posTag">
     <label for="sentence">Sentence:</label>
     <input type="text" id="sentence" name="sentence" required><br><br>
     <input type="submit" value="Pos Tag">
 </form>
+<p id="result"></p>
+<script src="js/english-pos-tag.js"></script>
 </body>
 </html>
