--- a/turkish-morphological-lexicon.html
+++ b/turkish-morphological-lexicon.html
@@ -5,10 +5,12 @@
     <title>Turkish Morphological Lexicon</title>
 </head>
 <body>
-<form>
+<form id="morphologySearch">
     <label for="word">Word:</label>
     <input type="text" id="word" name="word" required><br><br>
-    <input type="submit" value="Find Submorphology">
+    <input type="submit" value="Find Morphology">
 </form>
+<p id="result"></p>
+<script src="js/morphology-search.js"></script>
 </body>
 </html>
