Added Turkish and English wordnet search.

--- a/english-wordnet.html
+++ b/english-wordnet.html
@@ -5,22 +5,24 @@
     <title>English WordNet</title>
 </head>
 <body>
-<form>
+<form id="wordSearch">
     <label for="word">Word:</label>
     <input type="text" id="word" name="word" required><br><br>
     <input type="submit" value="Find Word">
 </form>
 <br>
-<form>
-    <label for="word2">Word:</label>
-    <input type="text" id="word2" name="word2" required><br><br>
+<form id="synonymSearch">
+    <label for="synonymWord">Word:</label>
+    <input type="text" id="synonymWord" name="synonymWord" required><br><br>
     <input type="submit" value="Find Synonym">
 </form>
 <br>
-<form>
+<form id="idSearch">
     <label for="synset_id">SynSet Id:</label>
     <input type="text" id="synset_id" name="synset_id" required><br><br>
     <input type="submit" value="Find SynSet">
 </form>
+<p id="result"></p>
+<script src="js/english-wordnet-search.js"></script>
 </body>
 </html>
