--- a/turkish-framenet.html
+++ b/turkish-framenet.html
@@ -5,22 +5,24 @@
     <title>Turkish FrameNet</title>
 </head>
 <body>
-<form>
+<form id="frameSearch">
     <label for="frame_name">Frame name:</label>
     <input type="text" id="frame_name" name="frame_name" required><br><br>
     <input type="submit" value="Find Frame">
 </form>
 <br>
-<form>
+<form id="verbSearch">
     <label for="verb_name">Verb:</label>
     <input type="text" id="verb_name" name="verb_name" required><br><br>
     <input type="submit" value="Find Verb">
 </form>
 <br>
-<form>
+<form id="idSearch">
     <label for="verb_id">Verb SynSet Id:</label>
     <input type="text" id="verb_id" name="verb_id" required><br><br>
     <input type="submit" value="Find Verb">
 </form>
+<p id="result"></p>
+<script src="js/turkish/turkish-framenet-search.js"></script>
 </body>
 </html>
