--- a/turkish-morphological-lexicon.html
+++ b/turkish-morphological-lexicon.html
@@ -11,6 +11,6 @@
     <input type="submit" value="Find Morphology">
 </form>
 <p id="result"></p>
-<script src="js/morphology-search.js"></script>
+<script src="js/turkish/morphology-search.js"></script>
 </body>
 </html>
