--- a/turkish-spell-checker.html
+++ b/turkish-spell-checker.html
@@ -11,6 +11,6 @@
     <input type="submit" value="Spell Check">
 </form>
 <p id="result"></p>
-<script src="js/spell-check.js"></script>
+<script src="js/turkish/spell-check.js"></script>
 </body>
 </html>
