--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <p>
     <a href="turkish-spell-checker.html">Spell Checker</a>
 </p>
+<p>
+    <a href="turkish-morphological-analysis.html">Morphological Analysis</a>
+</p>
 <h2>English Resources</h2>
 <p>
     <a href="english-propbank.html">PropBank</a>
