--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <p>
     <a href="turkish-morphological-analysis.html">Morphological Analysis</a>
 </p>
+<p>
+    <a href="turkish-morphological-disambiguation.html">Morphological Disambiguation</a>
+</p>
 <h2>English Resources</h2>
 <p>
     <a href="english-propbank.html">PropBank</a>
