--- a/turkish-morphological-analysis.html
+++ b/turkish-morphological-analysis.html
@@ -8,7 +8,7 @@
 <form id="morphologicalAnalysis">
     <label for="sentence">Sentence:</label>
     <input type="text" id="sentence" name="sentence" required><br><br>
-    <input type="submit" value="Spell Check">
+    <input type="submit" value="Morphological Analysis">
 </form>
 <p id="result"></p>
 <script src="js/turkish/morphological-analysis.js"></script>
