--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <p>
     <a href="turkish-morphological-disambiguation.html">Morphological Disambiguation</a>
 </p>
+<p>
+    <a href="turkish-asciifier.html">Asciifier</a>
+</p>
 <h2>English Resources</h2>
 <p>
     <a href="english-propbank.html">PropBank</a>
