--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <p>
     <a href="turkish-deasciifier.html">Deasciifier</a>
 </p>
+<p>
+    <a href="turkish-word-sense-disambiguation.html">Word Sense Disambiguation</a>
+</p>
 <h2>English Resources</h2>
 <p>
     <a href="english-propbank.html">PropBank</a>
