Added named entity recognition.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 <p>
     <a href="turkish-sentiment-analysis.html">Sentiment Analysis</a>
 </p>
+<p>
+    <a href="turkish-named-entity-recognition.html">Named Entity Recognition</a>
+</p>
 <h2>English Resources</h2>
 <p>
     <a href="english-propbank.html">PropBank</a>
