auto loads Turkish framenet page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </nav>
     </header>
     <main class="main uk-container">
-      <iframe uk-height-viewport="expand: true" src="turkish-framenet.html" class="uk-width-1-1" />
+      <iframe uk-height-viewport="expand: true" src="" class="uk-width-1-1" />
     </main>
   </body>
 </html>
