Makes the logo text clickable and homebound

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="uk-container uk-padding-small uk-flex uk-flex-between uk-flex-middle">
-      <span class="uk-logo">NLP Toolkit</span>
+      <a href="/" class="uk-logo">NLP Toolkit</a>
       <ul class="uk-breadcrumb uk-margin-remove" aria-label="Breadcrumb">
         <li><span id="language"></span></li>
         <li><span id="toolkit"></span></li>
