switches to vue3 + router + pinia

--- a/index.html
+++ b/index.html
@@ -1,125 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
-    <meta charset="UTF-8" />
-    <title>NlpToolkit</title>
-    <!-- UIkit CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.23.0/dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="css/website/nlp_toolkit.css" />
-
-    <!-- UIkit JS -->
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.23.0/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.23.0/dist/js/uikit-icons.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="js/website/nlp_toolkit.js"></script>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
   </head>
   <body>
-    <header class="uk-container uk-padding-small uk-flex uk-flex-between uk-flex-middle">
-      <span class="uk-logo">NLP Toolkit</span>
-      <ul class="uk-breadcrumb uk-margin-remove" aria-label="Breadcrumb">
-        <li><span id="language"></span></li>
-        <li><span id="toolkit"></span></li>
-      </ul>
-      <nav class="uk-navbar-container uk-navbar-transparent uk-padding-remove uk-margin-remove">
-        <div class="uk-container">
-          <div uk-navbar>
-            <ul class="uk-navbar-nav">
-              <li>
-                <a>Turkish <span uk-drop-parent-icon></span></a>
-                <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
-                  <div class="uk-drop-grid uk-child-width-1-2" uk-grid>
-                    <div>
-                      <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li class="uk-text-bold">Resources</li>
-                        <li class="uk-nav-divider"></li>
-                        <li>
-                          <a href="turkish-framenet.html">FrameNet</a>
-                        </li>
-                        <li>
-                          <a href="turkish-propbank.html">PropBank</a>
-                        </li>
-                        <li>
-                          <a href="turkish-wordnet.html">WordNet</a>
-                        </li>
-                        <li>
-                          <a href="turkish-sentinet.html">SentiNet</a>
-                        </li>
-                        <li>
-                          <a href="turkish-dictionary.html">Dictionary</a>
-                        </li>
-                        <li>
-                          <a href="turkish-morphological-lexicon.html">Morphological Lexicon</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div>
-                      <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li class="uk-text-bold">Processing</li>
-                        <li class="uk-nav-divider"></li>
-                        <li>
-                          <a href="turkish-spell-checker.html">Spell Checker</a>
-                        </li>
-                        <li>
-                          <a href="turkish-morphological-analysis.html">Morphological Analysis</a>
-                        </li>
-                        <li>
-                          <a href="turkish-morphological-disambiguation.html">Morphological Disambiguation</a>
-                        </li>
-                        <li>
-                          <a href="turkish-asciifier.html">Asciifier</a>
-                        </li>
-                        <li>
-                          <a href="turkish-deasciifier.html">Deasciifier</a>
-                        </li>
-                        <li>
-                          <a href="turkish-word-sense-disambiguation.html">Word Sense Disambiguation</a>
-                        </li>
-                        <li>
-                          <a href="turkish-sentiment-analysis.html">Sentiment Analysis</a>
-                        </li>
-                        <li>
-                          <a href="turkish-named-entity-recognition.html">Named Entity Recognition</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <a>English <span uk-drop-parent-icon></span></a>
-                <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
-                  <div class="uk-drop-grid uk-child-width-1-2" uk-grid>
-                    <div>
-                      <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li class="uk-text-bold">Resources</li>
-                        <li class="uk-nav-divider"></li>
-                        <li>
-                          <a href="english-propbank.html">PropBank</a>
-                        </li>
-                        <li>
-                          <a href="english-wordnet.html">WordNet</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div>
-                      <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li class="uk-text-bold">Processing</li>
-                        <li class="uk-nav-divider"></li>
-                        <li>
-                          <a href="english-pos-tagger.html">Pos Tagger</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main class="main uk-container">
-      <iframe uk-height-viewport="expand: true" src="" class="uk-width-1-1" />
-    </main>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
